# serializer version: 1
# name: test_layout_metrics_snapshot[ClipFieldToBox]
  dict({
    'backward_links': 0,
    'crossings': 1,
    'flow_links': 0,
    'foreign_nodes_in_frames': 0,
    'fork_imbalance': 0.0,
    'frame_overlaps': 0,
    'height': 277.0,
    'imbalance': 17.0,
    'level_flow_links': 0,
    'level_links': 5,
    'link_length': 1614.0,
    'link_span_y': 428.0,
    'links': 10,
    'links_through_nodes': 2,
    'node_overlaps': 0,
    'nodes': 10,
    'reroutes': 0,
    'straight_links': 2,
    'width': 1515.0,
  })
# ---
# name: test_layout_metrics_snapshot[GeometryPrincipalComponents]
  dict({
    'backward_links': 0,
    'crossings': 9,
    'flow_links': 7,
    'foreign_nodes_in_frames': 0,
    'fork_imbalance': 16.0,
    'frame_overlaps': 0,
    'height': 498.0,
    'imbalance': 109.0,
    'level_flow_links': 1,
    'level_links': 2,
    'link_length': 3582.0,
    'link_span_y': 2302.0,
    'links': 21,
    'links_through_nodes': 2,
    'node_overlaps': 0,
    'nodes': 10,
    'reroutes': 0,
    'straight_links': 0,
    'width': 910.0,
  })
# ---
# name: test_layout_metrics_snapshot[PrincipalComponents]
  dict({
    'backward_links': 1,
    'crossings': 30,
    'flow_links': 0,
    'foreign_nodes_in_frames': 0,
    'fork_imbalance': 0.0,
    'frame_overlaps': 0,
    'height': 645.0,
    'imbalance': 80.0,
    'level_flow_links': 0,
    'level_links': 7,
    'link_length': 10620.0,
    'link_span_y': 4076.0,
    'links': 52,
    'links_through_nodes': 14,
    'node_overlaps': 0,
    'nodes': 24,
    'reroutes': 0,
    'straight_links': 2,
    'width': 2428.0,
  })
# ---
# name: test_layout_metrics_snapshot[SliceToIndices]
  dict({
    'backward_links': 0,
    'crossings': 4,
    'flow_links': 0,
    'foreign_nodes_in_frames': 0,
    'fork_imbalance': 0.0,
    'frame_overlaps': 0,
    'height': 373.0,
    'imbalance': 27.0,
    'level_flow_links': 0,
    'level_links': 2,
    'link_length': 1262.0,
    'link_span_y': 801.0,
    'links': 12,
    'links_through_nodes': 1,
    'node_overlaps': 0,
    'nodes': 9,
    'reroutes': 0,
    'straight_links': 0,
    'width': 1012.0,
  })
# ---
# name: test_layout_metrics_snapshot[annotated]
  dict({
    'backward_links': 0,
    'crossings': 0,
    'flow_links': 5,
    'foreign_nodes_in_frames': 0,
    'fork_imbalance': 116.0,
    'frame_overlaps': 1,
    'height': 503.0,
    'imbalance': 62.0,
    'level_flow_links': 3,
    'level_links': 6,
    'link_length': 1257.0,
    'link_span_y': 395.0,
    'links': 9,
    'links_through_nodes': 0,
    'node_overlaps': 0,
    'nodes': 11,
    'reroutes': 2,
    'straight_links': 4,
    'width': 1531.0,
  })
# ---
# name: test_layout_metrics_snapshot[chain]
  dict({
    'backward_links': 0,
    'crossings': 0,
    'flow_links': 4,
    'foreign_nodes_in_frames': 0,
    'fork_imbalance': 0.0,
    'frame_overlaps': 0,
    'height': 286.0,
    'imbalance': 0.0,
    'level_flow_links': 4,
    'level_links': 4,
    'link_length': 137.0,
    'link_span_y': 48.0,
    'links': 4,
    'links_through_nodes': 0,
    'node_overlaps': 0,
    'nodes': 5,
    'reroutes': 0,
    'straight_links': 2,
    'width': 840.0,
  })
# ---
# name: test_layout_metrics_snapshot[compositor_chain]
  dict({
    'backward_links': 0,
    'crossings': 0,
    'flow_links': 0,
    'foreign_nodes_in_frames': 0,
    'fork_imbalance': 0.0,
    'frame_overlaps': 0,
    'height': 1389.0,
    'imbalance': 262.0,
    'level_flow_links': 0,
    'level_links': 2,
    'link_length': 665.0,
    'link_span_y': 598.0,
    'links': 4,
    'links_through_nodes': 0,
    'node_overlaps': 0,
    'nodes': 5,
    'reroutes': 0,
    'straight_links': 2,
    'width': 665.0,
  })
# ---
# name: test_layout_metrics_snapshot[diamond]
  dict({
    'backward_links': 0,
    'crossings': 0,
    'flow_links': 7,
    'foreign_nodes_in_frames': 0,
    'fork_imbalance': 0.0,
    'frame_overlaps': 0,
    'height': 590.0,
    'imbalance': 44.0,
    'level_flow_links': 3,
    'level_links': 3,
    'link_length': 975.0,
    'link_span_y': 851.0,
    'links': 7,
    'links_through_nodes': 0,
    'node_overlaps': 0,
    'nodes': 6,
    'reroutes': 0,
    'straight_links': 2,
    'width': 680.0,
  })
# ---
# name: test_layout_metrics_snapshot[fan_in]
  dict({
    'backward_links': 0,
    'crossings': 0,
    'flow_links': 16,
    'foreign_nodes_in_frames': 0,
    'fork_imbalance': 0.0,
    'frame_overlaps': 0,
    'height': 1972.0,
    'imbalance': 65.0,
    'level_flow_links': 8,
    'level_links': 8,
    'link_length': 4345.0,
    'link_span_y': 4004.0,
    'links': 16,
    'links_through_nodes': 0,
    'node_overlaps': 0,
    'nodes': 17,
    'reroutes': 0,
    'straight_links': 8,
    'width': 540.0,
  })
# ---
# name: test_layout_metrics_snapshot[framed_stages]
  dict({
    'backward_links': 0,
    'crossings': 0,
    'flow_links': 9,
    'foreign_nodes_in_frames': 0,
    'fork_imbalance': 0.0,
    'frame_overlaps': 0,
    'height': 434.0,
    'imbalance': 177.0,
    'level_flow_links': 9,
    'level_links': 9,
    'link_length': 1162.0,
    'link_span_y': 343.0,
    'links': 11,
    'links_through_nodes': 2,
    'node_overlaps': 0,
    'nodes': 11,
    'reroutes': 0,
    'straight_links': 9,
    'width': 1805.0,
  })
# ---
# name: test_layout_metrics_snapshot[long_links]
  dict({
    'backward_links': 0,
    'crossings': 0,
    'flow_links': 4,
    'foreign_nodes_in_frames': 0,
    'fork_imbalance': 0.0,
    'frame_overlaps': 0,
    'height': 223.0,
    'imbalance': 82.0,
    'level_flow_links': 4,
    'level_links': 4,
    'link_length': 867.0,
    'link_span_y': 41.0,
    'links': 6,
    'links_through_nodes': 3,
    'node_overlaps': 0,
    'nodes': 6,
    'reroutes': 0,
    'straight_links': 4,
    'width': 990.0,
  })
# ---
# name: test_layout_metrics_snapshot[nested_frames]
  dict({
    'backward_links': 0,
    'crossings': 0,
    'flow_links': 4,
    'foreign_nodes_in_frames': 0,
    'fork_imbalance': 0.0,
    'frame_overlaps': 0,
    'height': 524.0,
    'imbalance': 172.0,
    'level_flow_links': 4,
    'level_links': 4,
    'link_length': 756.0,
    'link_span_y': 343.0,
    'links': 6,
    'links_through_nodes': 0,
    'node_overlaps': 0,
    'nodes': 6,
    'reroutes': 0,
    'straight_links': 4,
    'width': 955.0,
  })
# ---
# name: test_layout_metrics_snapshot[shader_material]
  dict({
    'backward_links': 0,
    'crossings': 1,
    'flow_links': 2,
    'foreign_nodes_in_frames': 0,
    'fork_imbalance': 147.0,
    'frame_overlaps': 0,
    'height': 674.0,
    'imbalance': 103.0,
    'level_flow_links': 1,
    'level_links': 5,
    'link_length': 1781.0,
    'link_span_y': 1547.0,
    'links': 10,
    'links_through_nodes': 1,
    'node_overlaps': 0,
    'nodes': 9,
    'reroutes': 0,
    'straight_links': 0,
    'width': 1262.0,
  })
# ---
# name: test_layout_metrics_snapshot[trunk_with_feeders]
  dict({
    'backward_links': 0,
    'crossings': 0,
    'flow_links': 4,
    'foreign_nodes_in_frames': 0,
    'fork_imbalance': 0.0,
    'frame_overlaps': 0,
    'height': 680.0,
    'imbalance': 199.0,
    'level_flow_links': 4,
    'level_links': 7,
    'link_length': 1313.0,
    'link_span_y': 1137.0,
    'links': 10,
    'links_through_nodes': 0,
    'node_overlaps': 0,
    'nodes': 11,
    'reroutes': 0,
    'straight_links': 4,
    'width': 1012.0,
  })
# ---
# name: test_layout_metrics_snapshot[value_chain]
  dict({
    'backward_links': 0,
    'crossings': 0,
    'flow_links': 0,
    'foreign_nodes_in_frames': 0,
    'fork_imbalance': 0.0,
    'frame_overlaps': 0,
    'height': 473.0,
    'imbalance': 23.0,
    'level_flow_links': 0,
    'level_links': 0,
    'link_length': 786.0,
    'link_span_y': 645.0,
    'links': 8,
    'links_through_nodes': 0,
    'node_overlaps': 0,
    'nodes': 9,
    'reroutes': 0,
    'straight_links': 0,
    'width': 850.0,
  })
# ---
# name: test_layout_metrics_snapshot[zones]
  dict({
    'backward_links': 0,
    'crossings': 0,
    'flow_links': 10,
    'foreign_nodes_in_frames': 0,
    'fork_imbalance': 11.0,
    'frame_overlaps': 0,
    'height': 771.0,
    'imbalance': 60.0,
    'level_flow_links': 6,
    'level_links': 7,
    'link_length': 2077.0,
    'link_span_y': 999.0,
    'links': 12,
    'links_through_nodes': 0,
    'node_overlaps': 0,
    'nodes': 12,
    'reroutes': 0,
    'straight_links': 0,
    'width': 1578.0,
  })
# ---
